--- a/index.html
+++ b/index.html
@@ -5,8 +5,136 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leader board</title>
+    <!-- for icon -->
+    <script src="https://kit.fontawesome.com/b554e45c06.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+
+        </nav>
+    </header>
+
+    <main>
+        <section class="container">
+            <div class="top-player">
+                <h1 class="section-title">Top Players</h1>
+                <div class="players">
+                    <div class="player">
+                        <img src="images/players/player-1.png" alt="">
+                        <h3 class="player-name">Player No.1</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-2.png" alt="">
+                        <h3 class="player-name">Player No.2</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-3.png" alt="">
+                        <h3 class="player-name">Player No.3</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-4.png" alt="">
+                        <h3 class="player-name">Player No.4</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-5.png" alt="">
+                        <h3 class="player-name">Player No.5</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-6.png" alt="">
+                        <h3 class="player-name">Player No.6</h3>
+                    </div>
+                </div>
+            </div>
+            <hr><br>
+            <div class="top-blog">
+                <h2 class="section-title">Top blogs</h2>
+                <div class="blogs">
+                    <article class="blog">
+                        <div class="thumbnail"><img src="images/blogs/blog-1.png" alt=""></div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
+                            <p class="author">By <a href="">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail"><img src="images/blogs/blog-2.png" alt=""></div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">UI cheat sheet: list vs grids</h3>
+                            <p class="author">By <a href="">Tess Gadd</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail"><img src="images/blogs/blog-3.png" alt=""></div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">7 typography tips for interface design</h3>
+                            <p class="author">By <a href="">Jeremiah Lam</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail"><img src="images/blogs/blog-4.png" alt=""></div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">Your logo is copied</h3>
+                            <p class="author">By <a href="">Ferdinand Vogler</a></p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
+        <section class="container">
+            <h1 class="section-title">Latest Courses</h1>
+            <div class="course-list">
+                <article class="course">
+                    <div class="course-img"><img src="images/courses/course-1.png" alt=""></div>
+                    <h3>React - The Complete Guide 2022</h3>
+                    <p>Reed Krakoff.</p>
+                    <div class="course-info">
+                        <div>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star emty"></i>
+                        </div>
+                        <div>4.5</div>
+                        <div class="clock"><i class="fa-regular fa-clock"></i> 01:30hr</div>
+                    </div>
+                </article>
+                <article class="course">
+                    <div class="course-img"><img src="images/courses/course-2.png" alt=""></div>
+                    <h3>Powerpoint 2022 Master Powerpoint Course</h3>
+                    <p>Walter Scott</p>
+                    <div class="course-info">
+                        <div>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star emty"></i>
+                        </div>
+                        <div>4.5</div>
+                        <div class="clock"><i class="fa-regular fa-clock"></i> 01:20hr</div>
+                    </div>
+                </article>
+                <article class="course">
+                    <div class="course-img"><img src="images/courses/course-3.png" alt=""></div>
+                    <h3>The Complete JavaScript Course 2022</h3>
+                    <p>Reed Krakoff.</p>
+                    <div class="course-info">
+                        <div>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star emty"></i>
+                        </div>
+                        <div>4.4</div>
+                        <div class="clock"><i class="fa-regular fa-clock"></i> 01:30hr</div>
+                    </div>
+                </article>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
